@@ -1,24 +1,0 @@
-<!DOCTYPE html>
-<style>
-* {
-    display: table-cell;
-}
-</style>
-<p>Bug 92145: Crash in WebCore::RenderTableSection::layoutRows</p>
-<p>There should be PASSED below and we shouldn't crash or ASSERT.</p>
-<div id="firstDiv"><div id=secondDiv></div>
-<script>
-if (window.testRunner)
-    testRunner.dumpAsText();
-
-function crash() {
-    firstDiv.style.display = "inline";
-    window.scrollBy(5);
-    secondDiv.outerHTML = "PASSED.";
-    
-    // Remove the <style> to avoid having it dumped in the output.
-    var styleTag = document.getElementsByTagName("style")[0];
-    styleTag.parentNode.removeChild(styleTag);
-}
-document.addEventListener("DOMContentLoaded", crash, false);
-</script>
